修复中文输入